--- a/JobDetails.html
+++ b/JobDetails.html
@@ -126,7 +126,7 @@
                 <li><strong>Category</strong>: Web Development</li>
                 <li><strong>Client</strong>: Unavailable</li>
                 <li><strong>Project date</strong>: 1 Sep. 2022</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/anasamin22311/Jobs">www.anasamin_jobs.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/anasamin22311/NewJobs">www.anasamin_jobs.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
