--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                      <form onsubmit="SendEmail(); reset();return false; "   >
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -697,6 +697,11 @@
                             </div>
                           </div>
                           <div class="col-md-12">
+                            <div class="form-group">
+                              <input type="text" class="form-control" name="phoneNo" id="phoneNo" placeholder="Phone Number" >
+                            </div>
+                          </div>
+                          <div class="col-md-12 " style="margin-top: 10pt;">
                             <div class="form-group">
                               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                             </div>
@@ -777,6 +782,26 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script >
+    function SendEmail(){
+      Email.send({
+    Host : "smtp.elasticemail.com",
+    Username : "anasamin22311@gmail.com",
+    Password : "E95EEBB1EA99A7BEB0FADE8B8B50040D4940",
+    To : 'anasamin2002f@gmail.com',
+    From : document.getElementById("email").value,
+    Subject : "New contact form",
+    Body : "Name"+document.getElementById("name").value
+    +"<br> Email: "+document.getElementById("email").value
+    +"<br> Subject: "+document.getElementById("subject").value
+    +"<br> Phone Number: "+document.getElementById("phoneNo").value
+    +"<br> Message: "+document.getElementById("message").value
+}).then(
+  message => alert(message)
+);
+    }
+  </script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
