--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form onsubmit="SendEmail(); reset();return false; "   >
+                      <form onsubmit="SendEmail();"   >
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -705,12 +705,12 @@
                             <div class="form-group">
                               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                             </div>
-                          </div>
-                          <div class="col-md-12 text-center my-3">
+                           </div>
+                          <!-- <div class="col-md-12 text-center my-3">
                             <div class="loading">Loading</div>
                             <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
-                          </div>
+                          </div>  -->
                           <div class="col-md-12 text-center">
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
