--- a/index.html
+++ b/index.html
@@ -786,9 +786,7 @@
   <script >
     function SendEmail(){
       Email.send({
-    Host : "smtp.elasticemail.com",
-    Username : "anasamin22311@gmail.com",
-    Password : "E95EEBB1EA99A7BEB0FADE8B8B50040D4940",
+    SecureToken: "aeecb0f5-f20a-4e8a-82b2-3d8d4ba9ee62",
     To : 'anasamin2002f@gmail.com',
     From : document.getElementById("email").value,
     Subject : "New contact form",
