--- a/MarketDetails.html
+++ b/MarketDetails.html
@@ -23,6 +23,14 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: DevFolio
+  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
@@ -38,7 +46,29 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-         </ul>
+          <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
+          <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
+          <!-- <li><a class="nav-link scrollto " href="#work">Work</a></li> -->
+          <!-- <li><a class="nav-link scrollto " href="#blog">Blog</a></li> -->
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li> -->
+          <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
+        </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
@@ -51,7 +81,13 @@
       <div class="table-cell">
         <div class="container">
           <h2 class="hero-title mb-4">online Shop</h2>
-          </div>
+         <!-- <ol class="breadcrumb d-flex justify-content-center">
+             <li class="breadcrumb-item">
+              <a href="#">Home</a>
+            </li>
+            <li class="breadcrumb-item active">Portfolio Details</li>
+          </ol> -->
+        </div>
       </div>
     </div>
   </div>
@@ -76,6 +112,10 @@
                   <img src="assets/img/Projects/Market/2.png" alt="">
                 </div>
 
+                <!-- <div class="swiper-slide">
+                  <img src="assets/img/portfolio-details-3.jpg" alt="">
+                </div> -->
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -88,7 +128,8 @@
                 <li><strong>Category</strong>: Web Design</li>
                 <li><strong>Client</strong>: Unavailable</li>
                 <li><strong>Project date</strong>: 18 Sep. 2021</li>
-               
+                <!-- <li><strong>Project URL</strong>: <a href="https://github.com/anasamin22311/HotelManagementSystem">www.anasamin.com</a></li>
+              </ul> -->
             </div>
             <div class="portfolio-description">
               <h2>Details</h2>
@@ -117,6 +158,12 @@
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <strong>Anas2023</strong>. All Rights Reserved</p>
             <div class="credits">
+              <!--
+              All the links in the footer should remain intact.
+              You can delete the links only if you purchased the pro version.
+              Licensing information: https://bootstrapmade.com/license/
+              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
+            -->
             Designed by <a href="https://www.instagram.com/anasamin22311/">Anas Amin</a>
             </div>
           </div>
