--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <div class="d-flex justify-content-center align-items-end" >
                     <a class="btn btn-primary btn-outline-light" 
                     href="https://drive.google.com/uc?id=1csU4RKQu04NM_lrt1CkOZR26eFqvEOW0&export=download" 
-                    > download My CV</a>
+                    > Download my CV</a>
                   </div>
                 </div>
               </div>
