--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
+                    <p class="title-s">Skills</p>
                     <span>C#</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
