--- a/portfolioDetails.html
+++ b/portfolioDetails.html
@@ -139,7 +139,7 @@
                      a set of software solutions
                      that keep operations flowing. There are accounting packages, customer relationship management
                      (CRM) packages, and a dizzying array of industry-specific software. Tech: C Sharp,
-                     ASP.net(Blazor), .net5,Entity Framework,SQL Server, HTML5, Css3, Bootstrap,
+                     ASP.net Core, .net5,Entity Framework,SQL Server, HTML5, Css3, Bootstrap,
                      JavaScript
               </p>
             </div>
