--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html">Anas Amin</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
@@ -144,8 +143,7 @@
                   </div>
                   <div class="d-flex justify-content-center align-items-end" >
                     <a class="btn btn-primary btn-outline-light" 
-                    href="https://drive.google.com/uc?id=1csU4RKQu04NM_lrt1CkOZR26eFqvEOW0&export=download" 
-                    > Download my CV</a>
+                    href="https://drive.google.com/uc?id=1l-JMZxFlY2MPwET9pA5QsXJlUo11ZpDQ&export=download">Download my CV</a>
                   </div>
                 </div>
               </div>
@@ -308,7 +306,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Graduation Project</h2>
+                    <h2 class="w-title">CRISPR CAS9</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">26 Feb. 2023</span>
                     </div>
