--- a/CrisperDetails.html
+++ b/CrisperDetails.html
@@ -21,14 +21,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -38,34 +30,11 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html">Anas Amin</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="index.html">Home</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
-          <!-- <li><a class="nav-link scrollto " href="#work">Work</a></li> -->
-          <!-- <li><a class="nav-link scrollto " href="#blog">Blog</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
-          <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -78,13 +47,7 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Graduation Project</h2>
-         <!-- <ol class="breadcrumb d-flex justify-content-center">
-             <li class="breadcrumb-item">
-              <a href="#">Home</a>
-            </li>
-            <li class="breadcrumb-item active">Portfolio Details</li>
-          </ol> -->
+          <h2 class="hero-title mb-4">CRISPR Cas9</h2>
         </div>
       </div>
     </div>
@@ -109,10 +72,34 @@
                 <div class="swiper-slide">
                   <img src="assets/img/Projects/CRisper/2.png" alt="">
                 </div>
+                
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/3.png" alt="">
+                </div>
 
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio-details-3.jpg" alt="">
-                </div> -->
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/5.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/6.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/7.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/8.png" alt="">
+                </div> 
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Projects/CRisper/9.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -126,18 +113,16 @@
                 <li><strong>Category</strong>: Web Development</li>
                 <li><strong>Client</strong>: Unavailable</li>
                 <li><strong>Project date</strong>: 26 Feb. 2023</li>
-                <li><strong>Project URL</strong>: <a href="26 Feb. 2023">www.anasamin_graduation.com</a></li>
+                <!-- <li><strong>Project URL</strong>: <a href="26 Feb. 2023">www.anasamin_graduation.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Details</h2>
                 <p>
-                     a set of software solutions that allow the user to insert his DNA sequence and 
-                     the app detict if he has or maybe will have lung cancer or not 
-                     Tech: C Sharp,
-                     ASP.net(Core), .net6, Entity Framework, SQL Server, HTML5, Css3, Bootstrap,
-                     JavaScript, Macheine learning
-              </p>
+                  GenoPredict is a software solution using machine learning to analyze user-inputted DNA sequences for early detection of lung cancer risk 
+                  and how to cure it.
+                   It leverages .NET 6, C#, ASP.NET Core, SQL Server, Entity Framework, HTML5, CSS3, Bootstrap, and JavaScript,
+                   delivering a user-friendly interface and robust predictive capabilities.</p>
             </div>
           </div>
 
