--- a/portfolioDetails.html
+++ b/portfolioDetails.html
@@ -21,14 +21,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -38,34 +30,11 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html">Anas Amin</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
-          <!-- <li><a class="nav-link scrollto " href="#work">Work</a></li> -->
-          <!-- <li><a class="nav-link scrollto " href="#blog">Blog</a></li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
-          <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -79,12 +48,6 @@
       <div class="table-cell">
         <div class="container">
           <h2 class="hero-title mb-4">Portfolio</h2>
-         <!-- <ol class="breadcrumb d-flex justify-content-center">
-             <li class="breadcrumb-item">
-              <a href="#">Home</a>
-            </li>
-            <li class="breadcrumb-item active">Portfolio Details</li>
-          </ol> -->
         </div>
       </div>
     </div>
@@ -139,7 +102,7 @@
                      a set of software solutions
                      that keep operations flowing. There are accounting packages, customer relationship management
                      (CRM) packages, and a dizzying array of industry-specific software. Tech: C Sharp,
-                     ASP.net Core, .net5,Entity Framework,SQL Server, HTML5, Css3, Bootstrap,
+                     ASP.net(Blazor), .net5,Entity Framework,SQL Server, HTML5, Css3, Bootstrap,
                      JavaScript
               </p>
             </div>
@@ -160,12 +123,6 @@
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <strong>Anas2023</strong>. All Rights Reserved</p>
             <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
             Designed by <a href="https://www.instagram.com/anasamin22311/">Anas Amin</a>
             </div>
           </div>
