--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   </div>
                   <div class="d-flex justify-content-center align-items-end" >
                     <a class="btn btn-primary btn-outline-light" 
-                    href="https://drive.google.com/uc?export=download&id=1K0Jh54OrVYLW9BQnzVqfTMWtLwmNgQOC">Download my CV</a>
+                    href="https://drive.google.com/uc?id=1y4AuRMFCEtIZXa67gw7BOYd_R7_puglW&export=download">Download my CV</a>
                   </div>
                 </div>
               </div>
