--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/Projects/CRisper/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://lungcancerdetect.azurewebsites.net/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/Projects/CRisper/1.png" alt="" class="img-fluid">
                 </div>
