--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   </div>
                   <div class="d-flex justify-content-center align-items-end">
                     <a class="btn btn-primary btn-outline-light"
-                      href="https://drive.google.com/uc?id=1y4AuRMFCEtIZXa67gw7BOYd_R7_puglW&export=download">Download
+                      href="https://drive.google.com/uc?export=download&id=1buBcNH-mtp9CltJJdVktvSVnBcXBs-Ah">Download
                       my CV</a>
                   </div>
                 </div>
